src/objects/Zuora__Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Acquired_By__c</fullName>
        <formula>Related_Quote__r.Owner:User.FirstName +&quot; &quot;+ Related_Quote__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquired By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisition_Channel__c</fullName>
        <label>Acquisition Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Centre</fullName>
                </value>
                <value>
                    <fullName>TCUK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignCode__c</fullName>
        <label>Campaign Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <label>Campaign Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Effective_Date_Time_String__c</fullName>
        <label>Cancellation Effective Date Time String</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Effective_Date_Time__c</fullName>
        <label>Cancellation Effective Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Effective_Date__c</fullName>
        <formula>DATEVALUE( Cancellation_Effective_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Process_Date_Time_String__c</fullName>
        <label>Cancellation Process Date Time String</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Process_Date_Time__c</fullName>
        <label>Cancellation Process Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>Cancellation reason values, the value is stored on description field in amendments</description>
        <inlineHelpText>Select the cancellation reason</inlineHelpText>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Editorial</fullName>
                </value>
                <value>
                    <fullName>Political</fullName>
                </value>
                <value>
                    <fullName>Lack of content</fullName>
                </value>
                <value>
                    <fullName>App performance</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>No compatible devices</fullName>
                </value>
                <value>
                    <fullName>Lack of time</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>Product switch</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Not known</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Ill health</fullName>
                </value>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Look and feel</fullName>
                </value>
                <value>
                    <fullName>Apple news</fullName>
                </value>
                <value>
                    <fullName>Duplicate subscription</fullName>
                </value>
                <value>
                    <fullName>Failed Credit Card Payment</fullName>
                </value>
                <value>
                    <fullName>Failed Direct Debit Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HiddenEffectiveStartDate__c</fullName>
        <description>A hidden field used to trigger a time dependent workflow to update the initial and ongoing prices at the effective start date of the product and charge</description>
        <label>Hidden Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HiddenInitialSubscriptionPrice__c</fullName>
        <description>A hidden field that will be used to populate the Initial Subscription Price at the product effective start date</description>
        <label>Hidden Initial Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HiddenOnGoingSubscriptionPrice__c</fullName>
        <description>A hidden field that will be used to populate the On Going Subscription Price at the product effective start date</description>
        <label>Hidden On Going Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Subscription_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Initial Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastPriceChange__c</fullName>
        <label>Last Price Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Going_Subscription_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>On-Going Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Zuora_Subscription_ID__c</fullName>
        <label>Original Zuora Subscription ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Subscription_ID__c</fullName>
        <formula>Related_Quote__r.Previous_Subscription__c</formula>
        <label>Previous Subscription ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceSegmentCode__c</fullName>
        <label>Price Segment Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoCode__c</fullName>
        <description>Promo code with which subscription was sold.</description>
        <inlineHelpText>Promo code with which subscription was sold.</inlineHelpText>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Subscriptions (Related Quote)</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Cancellation_Reason__c</fullName>
        <label>Sub-Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Brexit</fullName>
                </value>
                <value>
                    <fullName>Price increase</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Origin__c</fullName>
        <label>Subscription Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <label>Subscription Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Rate_Plan_Term_Type__c</fullName>
        <label>Subscription Rate Plan Term Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <formula>if( Zuora__Version__c==1,
 &apos;Subscription&apos;,
 if(Zuora__Version__c&gt;1,&apos;Amended Subscription&apos;,&apos;&apos;)
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <formula>Related_Quote__r.zqu__Previewed_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora_Subscription_Status__c</fullName>
        <formula>Case(Zuora__Status__c, 
&apos;Pending Cancellation&apos;,&apos;Cancelled&apos;, 
&apos;Pending Activation&apos;,&apos;Active&apos;,
Zuora__Status__c)</formula>
        <label>Zuora Subscription Status</label>
        <type>Text</type>
    </fields>
</CustomObject>